# wimcm

./: Cargo.toml  README.md
src/main/: error.rs  in.rs  lib.rs  method.rs  models.rs  out.rs  presets.rs
src/resources/: in.json  out.json
