[package]
name = "wimcm"
version = "0.1.2"
edition = "2021"
authors = ["Adriiii"]
description = "Wizards in Memory Cache Models"
readme = "README.md"
repository = "https://github.com/AdrisGithub/wimcm"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/wimcm"
exclude = ["src/resources/", ".github/", "sonar-project.properties"]

[lib]
path = "src/main/lib.rs"

[dependencies]
wjp = "1.1.1"
wbdl = "1.0.0"